--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bignumber.js": "^9.0.1",
     "body-scroll-lock": "^3.1.5",
     "classnames": "^2.3.1",
     "fs": "^0.0.1-security",
@@ -14,6 +15,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-outside-click-handler": "^1.3.0",
+    "react-paypal-button-v2": "^2.6.3",
     "react-range": "^1.8.7",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
