--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
-local-dev-config.*
+src/local-dev-config.js
 
 .local-dev-config.js
 
