--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bignumber.js": "^9.0.1",
     "body-scroll-lock": "^3.1.5",
     "classnames": "^2.3.1",
+    "flexbox-react": "^4.4.0",
     "fs": "^0.0.1-security",
     "immutable": "^4.0.0-rc.12",
     "node-sass": "^5.0.0",
