--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "immutable": "^4.0.0-rc.12",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.1",
     "react-outside-click-handler": "^1.3.0",
     "react-paypal-button-v2": "^2.6.3",
