--- a/package.json
+++ b/package.json
@@ -18,15 +18,20 @@
     "react": "^17.0.1",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.1",
+    "react-floaterjs": "^1.0.6",
     "react-outside-click-handler": "^1.3.0",
+    "react-particles-js": "^3.5.3",
     "react-paypal-button-v2": "^2.6.3",
     "react-range": "^1.8.7",
+    "react-reveal": "^1.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-s3": "^1.3.1",
     "react-scripts": "4.0.2",
     "react-share": "^4.4.0",
     "react-slick": "^0.28.1",
+    "react-video-looper": "^1.0.16",
+    "tsparticles": "^1.34.0",
     "use-dark-mode": "^2.3.1",
     "web3": "^1.5.0"
   },
