--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-particles-js": "^3.5.3",
     "react-paypal-button-v2": "^2.6.3",
     "react-range": "^1.8.7",
+    "react-responsive-carousel": "^3.2.21",
     "react-reveal": "^1.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
