--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.3.1",
     "flexbox-react": "^4.4.0",
     "fs": "^0.0.1-security",
+    "fuse.js": "^6.4.6",
     "immutable": "^4.0.0-rc.12",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
