--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.4.8",
+    "@aws-amplify/cli": "^5.3.0",
+    "@aws-amplify/core": "^4.2.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "apollo-boost": "^0.4.9",
+    "aws-amplify": "^4.2.4",
+    "aws-appsync": "^4.1.1",
+    "aws-appsync-react": "^4.0.7",
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
     "body-scroll-lock": "^3.1.5",
@@ -13,13 +20,19 @@
     "classnames": "^2.3.1",
     "flexbox-react": "^4.4.0",
     "fs": "^0.0.1-security",
+    "global": "^4.4.0",
+    "graphql": "^15.5.1",
+    "graphql-request": "^3.5.0",
+    "graphql-tag": "^2.12.5",
     "immutable": "^4.0.0-rc.12",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-apollo": "^3.1.5",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.1",
     "react-outside-click-handler": "^1.3.0",
     "react-paypal-button-v2": "^2.6.3",
+    "react-query": "^3.21.0",
     "react-range": "^1.8.7",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
