--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.1",
     "react-floaterjs": "^1.0.6",
+    "react-loading": "^2.0.3",
     "react-outside-click-handler": "^1.3.0",
     "react-particles-js": "^3.5.3",
     "react-paypal-button-v2": "^2.6.3",
