--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fuse.js": "^6.4.6",
     "immutable": "^4.0.0-rc.12",
     "node-sass": "^5.0.0",
+    "posthog-js": "^1.16.0",
     "react": "^17.0.1",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.1",
