--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@imtbl/imx-sdk": "^1.1.0",
+    "@ethersproject/wallet": "^5.5.0",
+    "@imtbl/imx-sdk": "^1.2.6",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -13,6 +14,8 @@
     "boring-avatars": "^1.5.8",
     "classnames": "^2.3.1",
     "emailjs-com": "^3.2.0",
+    "enc-utils": "^3.0.0",
+    "ethers": "^5.5.1",
     "flexbox-react": "^4.4.0",
     "fs": "^0.0.1-security",
     "fuse.js": "^6.4.6",
