--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.3.1",
     "emailjs-com": "^3.2.0",
     "flexbox-react": "^4.4.0",
+    "fortmatic": "^2.2.1",
     "fs": "^0.0.1-security",
     "fuse.js": "^6.4.6",
     "immutable": "^4.0.0-rc.12",
