--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@progress/kendo-react-animation": "^4.13.0",
     "@progress/kendo-react-notification": "^4.13.0",
     "@progress/kendo-theme-default": "^4.43.0",
+    "@ramonak/react-progress-bar": "^4.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
