--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@progress/kendo-licensing": "^1.2.1",
     "@progress/kendo-react-animation": "^4.13.0",
     "@progress/kendo-react-notification": "^4.13.0",
-    "@progress/kendo-theme-default": "^4.43.0",
+    "@progress/kendo-theme-default": "^5.1.1",
     "@ramonak/react-progress-bar": "^4.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -31,6 +31,7 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.1",
     "react-floaterjs": "^1.0.6",
+    "react-image-magnify": "^2.7.4",
     "react-loading": "^2.0.3",
     "react-outside-click-handler": "^1.3.0",
     "react-particles-js": "^3.5.3",
