--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "boring-avatars": "^1.5.8",
     "classnames": "^2.3.1",
     "emailjs-com": "^3.2.0",
+    "ethereumjs-abi": "^0.6.8",
+    "ethereumjs-util": "^7.1.4",
     "flexbox-react": "^4.4.0",
     "fortmatic": "^2.2.1",
     "fs": "^0.0.1-security",
