--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@web3auth/base": "^0.7.0",
+    "@web3auth/web3auth": "^0.7.0",
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
     "body-scroll-lock": "^3.1.5",
